# fakefootball

./: .gitignore  NEON_SETUP.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: [[...path]].py
backend/: cron_generate.py  db.py  main.py  models.py  requirements.txt  schemas.py  seed.py  user_comments.json
backend/routers/: comments.py  cron.py  posts.py  regulars.py  stats.py  tags.py  users.py  votes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  app.vue  main.js  router.js  style.css
frontend/src/components/: app-footer.vue  app-header.vue  comment-list.vue  loading-spinner.vue  pagination.vue  post-card.vue  regulars-widget.vue  sort-bar.vue  stats-widget.vue  tag-badge.vue  tag-list.vue  vote-buttons.vue
frontend/src/composables/: authorlink.js  fingerprint.js  timeago.js
frontend/src/stores/: posts.js  stats.js  tags.js
frontend/src/views/: about.vue  home.vue  not-found.vue  post.vue  regular.vue  regulars.vue  sponsor.vue  tag.vue  user.vue
