[project]
name = "fakefootball"
version = "0.1.0"
description = "Fake football news app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "python-slugify>=8.0.4",
    "greenlet>=2.0,<3.3.2",
    "psycopg2-binary>=2.9.10",
]
